--- a/src/app/components/TrayComponents/search-barcode/search-barcode.component.html
+++ b/src/app/components/TrayComponents/search-barcode/search-barcode.component.html
@@ -47,4 +47,5 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    <div *ngIf="total">Total de resultados {{total}}</div>
 </div>
