--- a/src/app/components/TrayComponents/search-date/search-date.component.html
+++ b/src/app/components/TrayComponents/search-date/search-date.component.html
@@ -1,7 +1,8 @@
-<div class="container main-container">
-    <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
-        {{error}}</div>
-    <table *ngIf="Trayxdate" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+<div *ngIf="error" class="alert alert-danger mt-3 mb-0">
+    {{error}}</div>
+<div class="container main-container" *ngIf="!error">
+
+    <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
@@ -12,10 +13,8 @@
             <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button color="accent" (click)="verBandejas(element._id)">Detalles<p *ngIf=false>{{element._id}}</p>
-               
             </button>
             </td>
-
         </ng-container>
 
         <!-- Qr code Column -->
@@ -37,12 +36,15 @@
         <ng-container matColumnDef="fechaIngreso">
             <th mat-header-cell *matHeaderCellDef> fechaIngreso </th>
             <td mat-cell *matCellDef="let element"> {{element.fechaIngreso |date:'mediumDate':'+0000'}} </td>
+
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
     </table>
     <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+    <div *ngIf="total">Total de resultados {{total}}</div>
 </div>
 <!--
 <a  (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
