--- a/src/app/components/UserComponets/search-name/search-name.component.html
+++ b/src/app/components/UserComponets/search-name/search-name.component.html
@@ -25,13 +25,12 @@
             <td mat-cell *matCellDef="let element">
                 {{element.apPat}} {{element.apMat}}</td>
         </ng-container>
-        <ng-container matColumnDef="ubicacion">
-            <th mat-header-cell *matHeaderCellDef> ubicacion </th>
-            <td mat-cell *matCellDef="let element"> {{element.ubicacion.lugar}} </td>
-        </ng-container>
         <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef> acciones </th>
-            <td mat-cell *matCellDef="let element"></td>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button color="primary" (click)="sendID(element.rut)">Actualizar</button>
+                <button mat-raised-button color="accent" (click)="deleteUser(element._id)">Borrar</button>
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
