--- a/src/app/components/TrayComponents/search-date/search-date.component.html
+++ b/src/app/components/TrayComponents/search-date/search-date.component.html
@@ -1,13 +1,8 @@
 <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
     {{error}}</div>
 <div class="container main-container" *ngIf="!error">
-
+    <mat-card *ngIf="total">Total de resultados: {{total}}</mat-card>
     <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
-
-        <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
-
-        <!-- Details Column -->
 
         <ng-container matColumnDef="detalles">
             <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
@@ -24,14 +19,6 @@
                 {{element.codigoqr}} </td>
         </ng-container>
 
-        <!-- Weight Column 
-    
-<img [src]="TrayData.idImg" width=250px height=default />
-    <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element._id}} </td>
-    </ng-container>-->
-
         <!-- Date Column -->
         <ng-container matColumnDef="fechaIngreso">
             <th mat-header-cell *matHeaderCellDef> fechaIngreso </th>
@@ -43,10 +30,11 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
     </table>
-    <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
-    <div *ngIf="total">Total de resultados {{total}}</div>
+    <mat-paginator [pageSizeOptions]="[5, 9]" showFirstLastButtons></mat-paginator>
 </div>
+
 <!--
+    
 <a  (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
                     
                      
