--- a/src/app/components/TrayComponents/search-tray-user/search-tray-user.component.html
+++ b/src/app/components/TrayComponents/search-tray-user/search-tray-user.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
     {{error}}</div>
 <div class="container main-container" *ngIf="!error">
-
+    <mat-card *ngIf="total">Total de resultados: {{total}}</mat-card>
     <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
         <ng-container matColumnDef="nombre">
@@ -10,33 +10,19 @@
                 {{element.usuario.nombre}}
             </td>
         </ng-container>
-
         <ng-container matColumnDef="detalles">
             <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button color="accent" (click)="verBandejas(element._id)">Detalles<p *ngIf=false>{{element._id}}</p>
-               
             </button>
             </td>
-
         </ng-container>
 
-        <!-- Qr code Column -->
         <ng-container matColumnDef="codigoqr">
             <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
             <td mat-cell *matCellDef="let element">
                 {{element.codigoqr}} </td>
         </ng-container>
-
-        <!-- Weight Column 
-    
-<img [src]="TrayData.idImg" width=250px height=default />
-    <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element._id}} </td>
-    </ng-container>-->
-
-        <!-- Date Column -->
         <ng-container matColumnDef="fechaIngreso">
             <th mat-header-cell *matHeaderCellDef> fechaIngreso </th>
             <td mat-cell *matCellDef="let element"> {{element.fechaIngreso |date:'mediumDate':'+0000'}} </td>
@@ -45,13 +31,5 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
-
-    <div *ngIf="total">Total de resultados {{total}}</div>
+    <mat-paginator [pageSizeOptions]="[5, 9]" showFirstLastButtons></mat-paginator>
 </div>
-<!--
-<a  (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                    
-                     
-                    
-    </a>-->
