--- a/src/app/components/TrayComponents/tray-date-range-user/tray-date-range-user.component.html
+++ b/src/app/components/TrayComponents/tray-date-range-user/tray-date-range-user.component.html
@@ -1,39 +1,21 @@
 <div class="container main-container">
     <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
         {{error}}</div>
+    <mat-card *ngIf="total">Total de resultados: {{total}}</mat-card>
     <table *ngIf="TrayXDateXUser" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
-
-        <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
-
-        <!-- Details Column -->
-
         <ng-container matColumnDef="detalles">
             <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" (click)="verBandejas(element._id)">Detalles<p *ngIf=false>{{element._id}}</p>
-                   
+                <button mat-raised-button color="accent" (click)="verBandejas(element._id)">Detalles<p *ngIf=false>{{element._id}}</p>  
                 </button>
             </td>
-
         </ng-container>
-
-        <!-- Qr code Column -->
         <ng-container matColumnDef="codigoqr">
             <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
             <td mat-cell *matCellDef="let element">
                 {{element.codigoqr}} </td>
         </ng-container>
 
-        <!-- Weight Column 
-        
-    <img [src]="TrayData.idImg" width=250px height=default />
-        <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef> Weight </th>
-            <td mat-cell *matCellDef="let element"> {{element._id}} </td>
-        </ng-container>-->
-
-        <!-- Date Column -->
         <ng-container matColumnDef="fechaIngreso">
             <th mat-header-cell *matHeaderCellDef> fechaIngreso </th>
             <td mat-cell *matCellDef="let element"> {{element.fechaIngreso |date:'mediumDate':'+0000'}} </td>
@@ -43,5 +25,4 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
-    <div *ngIf="total">Total de resultados {{total}}</div>
 </div>
