Error de ubicacion arreglado, chart de ubicacion parcialmente arreglado

--- a/src/app/components/TrayComponents/search-date-range/search-date-range.component.html
+++ b/src/app/components/TrayComponents/search-date-range/search-date-range.component.html
@@ -13,7 +13,7 @@
 
         <ng-container matColumnDef="codigoqr">
             <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
-            <td mat-cell *matCellDef="let element"> {{element.codigoqr}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.codigoQr}} </td>
         </ng-container>
 
         <ng-container matColumnDef="fechaIngreso">
