--- a/src/app/components/TrayComponents/search-date/search-date.component.html
+++ b/src/app/components/TrayComponents/search-date/search-date.component.html
@@ -16,7 +16,7 @@
         <ng-container matColumnDef="codigoqr">
             <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
             <td mat-cell *matCellDef="let element">
-                {{element.codigoqr}} </td>
+                {{element.codigoQr}} </td>
         </ng-container>
 
         <!-- Date Column -->
