--- a/src/app/components/TrayComponents/search-tray-user/search-tray-user.component.html
+++ b/src/app/components/TrayComponents/search-tray-user/search-tray-user.component.html
@@ -21,7 +21,7 @@
         <ng-container matColumnDef="codigoqr">
             <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
             <td mat-cell *matCellDef="let element">
-                {{element.codigoqr}} </td>
+                {{element.codigoQr}} </td>
         </ng-container>
         <ng-container matColumnDef="fechaIngreso">
             <th mat-header-cell *matHeaderCellDef> fechaIngreso </th>
