--- a/src/app/components/TrayComponents/tray-date-range-user/tray-date-range-user.component.html
+++ b/src/app/components/TrayComponents/tray-date-range-user/tray-date-range-user.component.html
@@ -13,7 +13,7 @@
         <ng-container matColumnDef="codigoqr">
             <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
             <td mat-cell *matCellDef="let element">
-                {{element.codigoqr}} </td>
+                {{element.codigoQr}} </td>
         </ng-container>
 
         <ng-container matColumnDef="fechaIngreso">
