--- a/src/app/components/UserComponets/register/register.component.html
+++ b/src/app/components/UserComponets/register/register.component.html
@@ -42,7 +42,7 @@
                 <mat-form-field class="generic-fields">
                     <mat-label>Sucursal</mat-label>
                     <mat-select formControlName="ubicacion">
-                        <mat-option [value]="Ubicaciones" *ngFor="let ubicacion of Ubicaciones ;let i =index">
+                        <mat-option [value]="Ubicaciones[i]._id" *ngFor="let ubicacion of Ubicaciones ;let i =index">
                             {{Ubicaciones[i].lugar}}
                         </mat-option>
 
@@ -67,7 +67,7 @@
                 </mat-form-field>
 
                 <mat-form-field class="example-full-width4">
-                    <input formControlName="confirmpassword" matInput type="password" placeholder="Repetir Contraseña">
+                    <input matInput type="password" placeholder="Repetir Contraseña">
                 </mat-form-field>
 
             </mat-card-content>
