--- a/src/app/components/TrayComponents/search-date/search-date.component.html
+++ b/src/app/components/TrayComponents/search-date/search-date.component.html
@@ -7,7 +7,9 @@
         <ng-container matColumnDef="detalles">
             <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" (click)="verBandejas(element._id)">Detalles<p *ngIf=false>{{element._id}}</p>
+                <button mat-raised-button color="accent" (click)="verBandejas(element._id)"><i class="material-icons">
+                    remove_red_eye
+                    </i><p *ngIf=false>{{element._id}}</p>
             </button>
             </td>
         </ng-container>
@@ -30,7 +32,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 9]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="[5, 9]" showFirstLastButtons></mat-paginator>
 </div>
 
 <!--
