--- a/src/app/components/TrayComponents/search-type-tray/search-type-tray.component.html
+++ b/src/app/components/TrayComponents/search-type-tray/search-type-tray.component.html
@@ -1,9 +1,11 @@
 <div class="container main-container">
     <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
         {{error}}</div>
+    <mat-card *ngIf="!error">
+        <h5>bandejas del tipo: {{Tipo}}</h5>
+    </mat-card>
     <mat-card *ngIf="total">Total de resultados: {{total}}</mat-card>
     <table *ngIf="!error" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
-
         <ng-container matColumnDef="detalles">
             <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
             <td mat-cell *matCellDef="let element">
@@ -13,10 +15,12 @@
                         </button>
             </td>
         </ng-container>
+
         <ng-container matColumnDef="codigoqr">
             <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
             <td mat-cell *matCellDef="let element"> {{element.codigoQr}} </td>
         </ng-container>
+
         <ng-container matColumnDef="fechaIngreso">
             <th mat-header-cell *matHeaderCellDef> fechaIngreso </th>
             <td mat-cell *matCellDef="let element"> {{element.fechaIngreso |date:'mediumDate':'+0000'}} </td>
@@ -25,5 +29,5 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <div *ngIf="total">Total de resultados {{total}}</div>
+    <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="[5, 9]" showFirstLastButtons *ngIf="!error"></mat-paginator>
 </div>
