--- a/src/app/components/TrayComponents/tray-date-range-user/tray-date-range-user.component.html
+++ b/src/app/components/TrayComponents/tray-date-range-user/tray-date-range-user.component.html
@@ -6,7 +6,9 @@
         <ng-container matColumnDef="detalles">
             <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" (click)="verBandejas(element._id)">Detalles<p *ngIf=false>{{element._id}}</p>  
+                <button mat-raised-button color="accent" (click)="verBandejas(element._id)"><i class="material-icons">
+                    remove_red_eye
+                    </i><p *ngIf=false>{{element._id}}</p>  
                 </button>
             </td>
         </ng-container>
@@ -24,5 +26,5 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
