--- a/src/app/components/TypeTray/get-type-tray/get-type-tray.component.html
+++ b/src/app/components/TypeTray/get-type-tray/get-type-tray.component.html
@@ -1,3 +1,4 @@
+<div class="tittle">Lista Tipos de Bandeja</div>
 <div class="container main-container">
     <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
         {{error}}</div>
@@ -22,7 +23,9 @@
         <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef> acciones </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" (click)="deleteType(element.tipo)">Eliminar</button></td>
+                <button mat-raised-button color="accent" (click)="deleteType(element.tipo)"><i class="material-icons">
+                    delete
+                    </i></button></td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
