--- a/src/app/components/UbicationComponents/create-ubications/create-ubications.component.html
+++ b/src/app/components/UbicationComponents/create-ubications/create-ubications.component.html
@@ -1,3 +1,4 @@
+<div class="tittle">Registrar Ubicacion</div>
 <div class="login-wrapper2" fxLayout="row" fxLayoutAlign="center center">
     <mat-card class="box2">
         <mat-card-header>
