--- a/src/app/components/UbicationComponents/ubication-list/ubication-list.component.html
+++ b/src/app/components/UbicationComponents/ubication-list/ubication-list.component.html
@@ -1,3 +1,4 @@
+<div class="tittle">Sucursales</div>
 <div class="container main-container">
     <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
         {{error}}</div>
@@ -14,8 +15,15 @@
         <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef> acciones </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" (click)="deleteUbication(element._id)">Eliminar</button>
-                <button mat-raised-button color="accent" (click)="sendID(element._id)">Editar</button></td>
+                <a *ngIf="false" (click)="sendID(element._id)">
+                    <i class="material-icons">
+                        edit
+                        </i></a>
+                <a (click)="deleteUbication(element._id)">
+                    <i class="material-icons">
+                            delete
+                            </i></a>
+            </td>
 
         </ng-container>
 
