--- a/src/app/components/TrayComponents/search-date-range/search-date-range.component.html
+++ b/src/app/components/TrayComponents/search-date-range/search-date-range.component.html
@@ -26,5 +26,5 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="[5, 9]" showFirstLastButtons *ngIf="!error"></mat-paginator>
+    <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="[5, 9]" showFirstLastButtons></mat-paginator>
 </div>
