--- a/src/app/components/TrayComponents/search-tray-user/search-tray-user.component.html
+++ b/src/app/components/TrayComponents/search-tray-user/search-tray-user.component.html
@@ -1,15 +1,9 @@
-<div *ngIf="error" class="alert alert-danger mt-3 mb-0">
-    {{error}}</div>
-<div class="container main-container" *ngIf="!error">
-    <mat-card *ngIf="total">Total de resultados: {{total}}</mat-card>
-    <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+<div class="container main-container">
+    <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
+        {{error}}</div>
+    <mat-card *ngIf="total">Total de resultados: {{total}} || Historial de {{usuario}}</mat-card>
+    <table *ngIf="!error" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
-        <ng-container matColumnDef="nombre">
-            <th mat-header-cell *matHeaderCellDef> Nombre </th>
-            <td mat-cell *matCellDef="let element">
-                {{element.usuario.nombre}}
-            </td>
-        </ng-container>
         <ng-container matColumnDef="detalles">
             <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
             <td mat-cell *matCellDef="let element">
