--- a/src/app/components/TrayComponents/tray-date-range-user/tray-date-range-user.component.html
+++ b/src/app/components/TrayComponents/tray-date-range-user/tray-date-range-user.component.html
@@ -1,8 +1,8 @@
 <div class="container main-container">
     <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
         {{error}}</div>
-    <mat-card *ngIf="total">Total de resultados: {{total}}</mat-card>
-    <table *ngIf="TrayXDateXUser" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+    <mat-card *ngIf="total">Total de resultados: {{total}} || Registro de {{usuario}}</mat-card>
+    <table *ngIf="!error" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
         <ng-container matColumnDef="detalles">
             <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
             <td mat-cell *matCellDef="let element">
