--- a/src/app/components/UserComponets/register/register.component.html
+++ b/src/app/components/UserComponets/register/register.component.html
@@ -89,7 +89,7 @@
             <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
                 {{error}}
             </div>
-            <div *ngIf="res" class="alert alert-success mt-3 mb-0">
+            <div *ngIf="message" class="alert alert-success mt-3 mb-0">
                 {{message}}
             </div>
 
