--- a/src/app/components/UbicationComponents/ubication-list/ubication-list.component.html
+++ b/src/app/components/UbicationComponents/ubication-list/ubication-list.component.html
@@ -1,6 +1,6 @@
 <div class="tittle">Sucursales</div>
 <div class="container main-container">
-    <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
+    <div *ngIf="error" class="alert alert-success mt-3 mb-0">
         {{error}}</div>
     <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
@@ -19,10 +19,11 @@
                     <i class="material-icons">
                         edit
                         </i></a>
-                <a (click)="deleteUbication(element._id)">
-                    <i class="material-icons">
+                <button mat-mini-fab color="warn" (click)="deleteUbication(element._id)"> 
+                            <i class="material-icons">
                             delete
-                            </i></a>
+                            </i>
+                        </button>
             </td>
 
         </ng-container>
@@ -30,5 +31,5 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 9]" showFirstLastButtons *ngIf="!error"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 9]" showFirstLastButtons></mat-paginator>
 </div>
