--- a/src/app/components/UserComponets/search-name/search-name.component.html
+++ b/src/app/components/UserComponets/search-name/search-name.component.html
@@ -28,14 +28,16 @@
         <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef> acciones </th>
             <td mat-cell *matCellDef="let element">
-                <a (click)="sendID(element.rut)">
+                <button mat-flat-button color="primary" (click)="sendID(element.rut)">
                     <i class="material-icons">
                     edit
-                    </i></a>
-                <a (click)="deleteUser(element._id)">
+                    </i>
+                </button>
+                <button mat-flat-button color="warn" (click)="deleteUser(element._id)">
                     <i class="material-icons">
                         delete
-                        </i></a>
+                        </i>
+                    </button>
             </td>
         </ng-container>
 
