--- a/src/app/components/TypeTray/create-type-tray/create-type-tray.component.html
+++ b/src/app/components/TypeTray/create-type-tray/create-type-tray.component.html
@@ -24,12 +24,15 @@
             </mat-card-content>
 
             <button [disabled]="loading" mat-stroked-button color="primary" class="btn-block">Crear Tipo de Bandeja</button>
+            <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
+                {{error}}
+            </div>
             <div *ngIf="message" class="alert alert-success mt-3 mb-0">
                 {{message}}
             </div>
 
             <img *ngIf="loading" src="../../../assets/loading.gif" />
-            <a [routerLink]="['traytype/list']" class="btn btn-link">volver</a>
+            <a [routerLink]="['/traytype/list']" class="btn btn-link">volver</a>
         </form>
     </mat-card>
 </div>
