--- a/src/app/components/TypeTray/get-type-tray/get-type-tray.component.html
+++ b/src/app/components/TypeTray/get-type-tray/get-type-tray.component.html
@@ -1,7 +1,6 @@
 <div class="tittle">Lista Tipos de Bandeja</div>
 <div class="container main-container">
-    <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
-        {{error}}</div>
+
     <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
         <!--- Note that these columns can be defined in any order.
@@ -23,7 +22,7 @@
         <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef> acciones </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" (click)="deleteType(element.tipo)"><i class="material-icons">
+                <button mat-mini-fab color="warn" (click)="deleteType(element.tipo)"><i class="material-icons">
                     delete
                     </i></button></td>
         </ng-container>
@@ -31,4 +30,7 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    <mat-progress-bar *ngIf="progress" mode="indeterminate"></mat-progress-bar>
+    <div *ngIf="error" class="alert alert-success mt-3 mb-0">
+        {{error}}</div>
 </div>
