--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,11 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-html,
+html {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 body {
     max-height: 100%;
     margin: 0;
@@ -7,9 +13,8 @@ body {
 }
 
 body {
-    background: linear-gradient(#0084ff, #00398f);
+    background: linear-gradient(#F5F5F5, #A0A0A0);
     background-position: center;
-    background-size: 50000px;
     background-repeat: no-repeat;
     min-height: 100vh;
     margin: 0;
@@ -37,7 +42,8 @@ body {
     overflow: hidden;
     background: transparent;
     width: 100%;
-    height: 100%
+    height: 100%;
+    color: rgba(255, 255, 255, 0.87);
 }
 
 .mat-drawer .mat-drawer-inner-container .mat-list-base {
@@ -367,7 +373,7 @@ mat-accordion {
     position: fixed;
     padding-top: .3125rem;
     padding-bottom: .3125rem;
-    color: #fff;
+    color: #2E323A;
     margin-left: 17px;
     margin-top: 3px;
     text-transform: uppercase;
