Limpieza de codigo , Arreglo de botones, progress bar y cards agregados!

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,3 @@
-<!-- <div class=" content">
-
-    <ul class="list-group list-group-flush">
-        <h5>
-            <li class="list-group-item">Total: {{Tray}} bandejas</li>
-
-            <li class="list-group-item">Ultima: {{Lastup | date:'d MMM y'}}</li>
-        </h5>
-    </ul>
-</div>-->
 <div class=" content">
     <div class=" row">
         <div class=" col-12">
@@ -27,24 +17,39 @@
             </div>
         </div>
     </div>
+
     <div class=" row">
         <div class=" col-lg-4">
             <div class=" card card-chart">
                 <div class=" card-header">
-
                     <h5 class=" card-category">Reporte de Bandejas por Sucursal</h5>
-                    <mat-form-field>
-                        <mat-label>Sucursal</mat-label>
-                        <mat-select [formControl]="ubicacionControl">
-                            <mat-option *ngFor="let sucursal of ubicaciones;let i = index" [value]="sucursal">
-                                {{ubicaciones[i]._id.lugar}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
+
                 </div>
                 <div class=" card-body">
 
-                    <div class=" chart-area"><strong>{{ubicacionControl.value?.total}}</strong> <img src="../../../assets/TrayIcon.png" alt="" height="42" width="42"><canvas *ngIf="false" id="CountryChart"> Bandejas </canvas></div>
+                    <mat-card class="chart-ubication">
+                        <mat-card-header class="cabeza">
+                            <mat-card-title></mat-card-title>
+                            <mat-card-subtitle>
+                                <mat-form-field>
+                                    <mat-label>Sucursal</mat-label>
+                                    <mat-select [formControl]="ubicacionControl">
+                                        <mat-option *ngFor="let sucursal of ubicaciones;let i = index" [value]="sucursal">
+                                            {{ubicaciones[i]._id.lugar}}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </mat-card-subtitle>
+
+                        </mat-card-header>
+
+                        <mat-card-content>
+                            <p class="ubicaciontext">
+
+                                <strong>{{ubicacionControl.value?.total}}</strong> <img src="../../../assets/TrayIcon.png" alt="" height="42" width="42">
+                            </p>
+                        </mat-card-content>
+                    </mat-card>
 
                 </div>
             </div>
@@ -58,7 +63,19 @@
                     </h3>
                 </div>
                 <div class=" card-body">
-                    <div class=" chart-area"><strong>{{daily}}</strong> <img src="../../../assets/TrayIcon.png" alt="" height="42" width="42">
+                    <mat-card class="chart-ubication">
+                        <mat-card-header class="cabeza">
+                            <mat-card-title></mat-card-title>
+                            <mat-card-subtitle>
+                            </mat-card-subtitle>
+                        </mat-card-header>
+                        <mat-card-content>
+                            <p class="ubicaciontext">
+                                <strong class="bandejasdaily">{{daily}}</strong> <img src="../../../assets/TrayIcon.png" alt="" height="42" width="42">
+                            </p>
+                        </mat-card-content>
+                    </mat-card>
+                    <div class=" chart-area">
                     </div>
                 </div>
             </div>
@@ -68,7 +85,7 @@
                 <div class=" card-header">
                     <h5 class=" card-category">Reporte de Bandejas</h5>
                     <h3 class=" card-title">
-                        <i class=" tim-icons icon-send text-success"> </i> Anual
+                        <i class=" tim-icons icon-send text-success"> </i> Mensual
                     </h3>
                 </div>
                 <div class=" card-body">
@@ -78,21 +95,3 @@
         </div>
     </div>
 </div>
-
-
-<!--  <mat-grid-list cols="2" rowHeight="2:1">
-        <mat-grid-tile class="border">
-            <div class="wrapper d-flex pr-4">
-                <small class="text-success font-weight-medium mr-2">USD</small>
-                <small class="text-gray">$103,342.50</small>
-            </div>
-        </mat-grid-tile>
-        <mat-grid-tile class="border">
-            <div *ngIf="chart">
-                <canvas id="canvas">{{ chart }}</canvas>
-            </div>
-        </mat-grid-tile>
-        <mat-grid-tile class="border">3</mat-grid-tile>
-        <mat-grid-tile class="border"> </mat-grid-tile>
-    </mat-grid-list>
-    -->
