--- a/src/styles.css
+++ b/src/styles.css
@@ -389,3 +389,20 @@ mat-accordion {
     min-width: 44px;
     line-height: 05px;
 }
+
+.mat-fab:not([class*=mat-elevation-z]),
+.mat-mini-fab:not([class*=mat-elevation-z]) {
+    margin-left: 4px;
+}
+
+.chart-ubication {
+    max-width: 400px;
+}
+
+.ubicaciontext {
+    text-align: center;
+}
+
+.bandejasdaily {
+    color: rgb(0, 0, 0);
+}
